# storage/api-docs/api-docs.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "TWPH Portal API",
+        "title": "Employee Portal API",
         "version": "1.0.0"
     },
     "paths": {
@@ -32,7 +32,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Success",
                         "content": {
                             "application/json": {
@@ -144,6 +144,25 @@
         }
     },
     "components": {
+        "schemas": {
+            "User": {
+                "title": "User",
+                "description": "Connects to users table",
+                "properties": {
+                    "id": {
+                        "description": "Unique, auto increment, Primary key",
+                        "type": "integer"
+                    },
+                    "email": {
+                        "description": "Unique",
+                        "type": "string",
+                        "format": "email",
+                        "example": "sample@mail.com"
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
